--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.2",
+    "nodemailer": "^7.0.3",
     "socket.io": "^4.8.1"
   }
 }
