--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
-{
+
+  {
+  "name": "hr-chatbot",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node src/app.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
